# databento-dotnet

./: .gitignore  API_Classification.md  API_REFERENCE.md  README.md  Readme_For_Coding_Agents.md  databento-dotnet.sln
archives/: README.md
docs/design/: BACKTESTING_ARCH2_IMPLEMENTATION.md  SESSION_NOTES_2025-12-09.md
examples/BatchDownloadKeepZip.Example/: BatchDownloadKeepZip.Example.csproj  Program.cs
examples/FeatureValidation.Test/: FeatureValidation.Test.csproj  Program.cs
examples/HistoricalFutureDates.Test/: README.md
src/Databento.Client/: Databento.Client.csproj
src/Databento.Client/DataSources/: LiveDataSource.cs
src/Databento.Client/Historical/: HistoricalClient.cs  IHistoricalClient.cs
src/Databento.Client/Live/: BacktestingClient.cs  ILiveBlockingClient.cs  ILiveClient.cs  LiveBlockingClient.cs  LiveClient.cs
src/Databento.Client/Models/: ConfigEnums.cs  Record.cs
src/Databento.Client/Models/Metadata/: DatasetRange.cs  SchemaDateRange.cs
src/Databento.Client/Models/Reference/: SecurityMasterRecord.cs
src/Databento.Interop/: Databento.Interop.csproj
src/Databento.Interop/Native/: NativeLibraryLoader.cs  NativeMethods.cs
src/Databento.Native/: CMakeLists.txt  vcpkg.json
src/Databento.Native/include/: databento_native.h
src/Databento.Native/src/: batch_wrapper.cpp  common_helpers.hpp  live_blocking_wrapper.cpp  live_client_wrapper.cpp
testScratchpad2.internal/: Program.cs
testscratchpad1.internal/: Program.cs  testscratchpad1.internal.csproj
